# rust

./: .gitignore  .gitmodules  Cargo.toml  GEMINI-2.md  GEMINI.md  PROOF.md  README.md  SOP_Documentation.md  boot.md  build_metrics.parquet  cargo_metadata.json  cargo_tree_output.txt  commit_message.txt  crates.txt  create_index.sh  dwim.sh  faqs.txt  generate_submodule_cargo_trees.sh  package_repos.json  test.cas  tmux-plan.md
compiler/rustc_serialize/: Cargo.toml
crates/rust-bootstrap/: Cargo.toml  README.md  build.rs
crates/rust-bootstrap/src/: build_state.rs  builder.rs  lib.rs  main.rs  parquet_trace_reporter.rs  trace_events.rs  tracer.rs
crates/rust-bootstrap/src/bootstrap_stages/: mod.rs
crates/rust-bootstrap/src/bootstrap_stages/build_bootstrap/: mod.rs
crates/rust-bootstrap/src/bootstrap_stages/cli_parser/: create_args_struct.rs  mod.rs  parse_args_from_cli.rs
crates/rust-bootstrap/src/bootstrap_stages/command_executor/: capture_end_time_and_duration.rs  capture_start_time.rs  command_execution_types.rs  create_command_execution_result.rs  execute_command.rs  execute_shell_command.rs  mod.rs
crates/rust-bootstrap/src/bootstrap_stages/config_loader/: mod.rs  parse_toml_content.rs  read_file_content.rs
crates/rust-bootstrap/src/bootstrap_stages/env_setup/: mod.rs  set_cargo_stage0.rs  set_rustc_bootstrap.rs  set_rustc_stage0.rs
crates/rust-bootstrap/src/bootstrap_stages/nix_patcher/: fix_bin_or_dylib.rs  mod.rs  should_fix_bins_and_dylibs.rs
crates/rust-bootstrap/src/bootstrap_stages/operational_logger/: logger.rs  mod.rs  schemas.rs
crates/rust-bootstrap/src/bootstrap_stages/stage0_detector/: detect_cargo_path.rs  detect_rustc_path.rs  detect_stage0.rs  mod.rs
crates/rust-bootstrap/src/bootstrap_stages/stage0_parser/: mod.rs  parse_stage0_file.rs
crates/rust-bootstrap/src/bootstrap_stages/toolchain_downloader/: bin_root.rs  download_component.rs  mod.rs  program_out_of_date.rs  rustc_stamp.rs  unpack_component.rs
crates/rust-bootstrap/src/build_state/: build_state_struct.rs  creation_args.rs  mod.rs
crates/rust-bootstrap/src/cargo_integration/: create_compile_options.rs  dispatch_cargo_command.rs  init_global_context.rs  init_workspace.rs  mod.rs  parse_cargo_args.rs  parse_global_args.rs
crates/rust-bootstrap/src/cargo_integration/clap_extensibility/: mod.rs
crates/rust-bootstrap/src/cargo_integration/global_args/: color_opt.rs  config_multi_opt.rs  explain_opt.rs  frozen_flag.rs  list_flag.rs  locked_flag.rs  mod.rs  offline_flag.rs  quiet_flag.rs  unstable_features_arg.rs  verbose_opt.rs  version_flag.rs
crates/rust-bootstrap/src/cargo_integration/subcommands/: build.rs  build_subcommand.rs  check.rs  check_subcommand.rs  clean.rs  mod.rs  run.rs  run_subcommand.rs  test_subcommand.rs
crates/rust-bootstrap/src/command_executor/: execute.rs  mod.rs  shell.rs  timed_execute.rs
crates/rust-bootstrap/src/config/: args.rs  loader.rs
crates/rust-bootstrap/src/git_analyzer/: errata.rs  mod.rs
crates/rust-bootstrap/src/git_analyzer/analysis/: analyze_git_repository.rs  git_analysis_summary.rs  mod.rs  new_analyze_git_repository.rs
crates/rust-bootstrap/src/git_analyzer/extractors/: get_all_blobs.rs  get_all_commits.rs  get_all_refs.rs  get_all_tags.rs  get_all_trees.rs  mod.rs  tag_target_id_to_string.rs
crates/rust-bootstrap/src/git_analyzer/schemas/: mod.rs
crates/rust-bootstrap/src/git_analyzer/tests/: mod.rs  new_test_analyze_git_repository.rs  new_test_blobs.rs  new_test_refs.rs  new_test_tags.rs  new_test_trees.rs  test_commits.rs  test_remote_git_operations.rs
crates/rust-bootstrap/src/main_stages/: build.rs  detect_and_setup_stage0.rs  download_and_setup_toolchain.rs  execute_and_report_command.rs  load_and_print_config.rs  mod.rs  parse_and_handle_cli_args.rs  print_final_message.rs  process_build_metrics.rs  run_bootstrap.rs
crates/rust-bootstrap/src/main_stages/build_bootstrap/: build_bootstrap.rs  build_bootstrap_cmd.rs  mod.rs
crates/rust-bootstrap/src/main_stages/command_executor/: run_command.rs
crates/rust-bootstrap/src/parquet_reporter/: close_parquet_writer.rs  create_arrow_schema.rs  create_record_batch.rs  errata_reporter.rs  get_record_batch_reader.rs  mod.rs  open_parquet_file.rs  prepare_record_batch_data.rs  print_summary_footer.rs  print_summary_header.rs  print_total_records.rs  process_record_batches.rs  read_parquet_metadata.rs  write_to_parquet_file.rs
crates/rust-bootstrap/tests/: build_bootstrap.rs  builder.rs  cargo_integration_tests.rs  config_loader.rs  crq_001_initial_setup.rs  full_build_tests.rs  mod.rs  monadic_execution.rs  new_build_bootstrap_tests.rs  new_build_bootstrap_tests_v2.rs  new_build_bootstrap_tests_v3.rs  new_build_bootstrap_tests_v4.rs  new_build_bootstrap_tests_v5.rs  new_builder_tests.rs  new_builder_tests_v2.rs  new_builder_tests_v3.rs  new_builder_tests_v4.rs  new_builder_tests_v5.rs  new_builder_tests_v6.rs  new_config_loader_tests.rs  new_operational_logger_tests.rs  new_operational_logger_tests_v2.rs  new_operational_logger_tests_v3.rs  new_operational_logger_tests_v4.rs  new_parquet_reporter_tests.rs  new_parquet_reporter_tests_v2.rs  new_parquet_reporter_tests_v3.rs  new_parquet_reporter_tests_v4.rs  new_parquet_reporter_tests_v5.rs  new_stage0_detector_tests.rs  new_stage0_parser_tests.rs  new_stage0_parser_tests_v2.rs  new_toolchain_downloader_tests.rs  new_toolchain_downloader_tests_v2.rs  new_toolchain_downloader_tests_v3.rs  new_toolchain_downloader_tests_v4.rs  new_toolchain_downloader_tests_v5.rs  operational_logger.rs  parquet_reporter.rs  stage0_detector.rs  (+2 more)
crates/rust-bootstrap/tests/cargo_integration/: mod.rs  test_init_global_context.rs  test_init_workspace.rs  test_run_cargo_command_dispatch.rs
crates/rust-bootstrap/tests/cargo_integration_tests/: mod.rs  new_test_handle_build_command.rs  new_test_handle_check_command.rs  new_test_handle_clean_command.rs  new_test_handle_run_command.rs  new_test_parse_cargo_args.rs
crates/rust-bootstrap/tests/helpers/: mod.rs
crates/rust-bootstrap/tests/stage1/: mod.rs  test_arg_parsing.rs
src/: stage0
(+1567 files in other folders)
