[package]
name        = "rust"

[lib]
name        = "rust"
version = "0.1.0"
authors= ["rust"]
#path = "library/std/src/lib.rs"
#path = "library/std/src/lib.rs"
path =  "library/core/src/ffi/mod.rs"
#./rust/library/core/src/ffi
# include = ["build.rs",
# "src/**/*",
# "compiler/**/*",
# "library/**/*",
# "test/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
