[workspace]
members = [
    "cargo_manager",
    "compiler/rustc",
    "crates/introspector/crates/introspector_profiler_macros",
    "crates/introspector/crates/resonance_analyzer",
    "crates/introspector/crates/resonance_core",
    "crates/introspector/crates/ultimate_blinkenlights_simulation",
    "crates/introspector/fixed_point_experiments",
    "crates/introspector/lattice/construction",
    "crates/introspector/lattice/lattice-analyzer",
    "crates/introspector/lattice/lattice-introspector",
    "crates/introspector/lattice/lattice-macros",
    "crates/introspector/lattice/lattice-macros-test",
    "crates/introspector/lattice/lattice-types",
    "crates/rust-bootstrap",
    "crates/syscall_instrumentation_macro",
    "crates/vendored/solfunmeme-banner",
    "src/build_helper",
    "src/rustc-std-workspace/rustc-std-workspace-alloc",
    "src/rustc-std-workspace/rustc-std-workspace-core",
    "src/rustc-std-workspace/rustc-std-workspace-std",
    "src/rustdoc-json-types",
    "src/tools/build-manifest",
    "src/tools/bump-stage0",
    "src/tools/cargotest",
    "src/tools/clippy",
    "src/tools/clippy/clippy_dev",
    "src/tools/collect-license-metadata",
    "src/tools/compiletest",
    "src/tools/coverage-dump",
    "src/tools/features-status-dump",
    "src/tools/generate-copyright",
    "src/tools/generate-windows-sys",
    "src/tools/html-checker",
    "src/tools/jsondocck",
    "src/tools/jsondoclint",
    "src/tools/linkchecker",
    "src/tools/lint-docs",
    "src/tools/lld-wrapper",
    "src/tools/llvm-bitcode-linker",
    "src/tools/miri/cargo-miri",
    "src/tools/opt-dist",
    "src/tools/remote-test-client",
    "src/tools/remote-test-server",
    "src/tools/replace-version-placeholder",
    "src/tools/run-make-support",
    "src/tools/rust-installer",
    "src/tools/rustdoc",
    "src/tools/rustdoc-gui-test",
    "src/tools/rustdoc-themes",
    "src/tools/rustfmt",
    "src/tools/test-float-parse",
    "src/tools/tidy",
    "src/tools/tier-check",
    "src/tools/unicode-table-generator",
    "src/tools/unstable-book-gen",
    "src/tools/wasm-component-ld",
    "src/tools/x",
    "submodule_analyzer",
    "vendor/Lazarus",
    "vendor/latticefold-rs",
    "vendor/lattirust",
    "vendor/qfall-crypto",
]
exclude = [
    "build",
    "compiler/rustc_codegen_cranelift",
    "compiler/rustc_codegen_gcc",
    "src/bootstrap",
    "tests/rustdoc-gui",
    "obj",
]
resolver = "2"
