[workspace]
members = [
    "cargo_manager",
    "compiler/rustc",
    "crates/introspector/crates/introspector_profiler_macros",
    "crates/introspector/crates/resonance_analyzer",
    "crates/introspector/crates/resonance_core",
    "crates/introspector/crates/ultimate_blinkenlights_simulation",
    "crates/introspector/fixed_point_experiments",
    "crates/introspector/lattice/construction",
    "crates/introspector/lattice/lattice-analyzer",
    "crates/introspector/lattice/lattice-introspector",
    "crates/introspector/lattice/lattice-macros",
    "crates/introspector/lattice/lattice-macros-test",
    "crates/introspector/lattice/lattice-types",
    "crates/rust-bootstrap",
    "crates/syscall_instrumentation_macro",
    "crates/rustc-literal-escaper",
    "crates/introspector/vendor/libminizinc/crates/tmux_controller",
    "crates/introspector/vendor/libminizinc/crates/dump_tmux_status",
    "crates/introspector/vendor/libminizinc/crates/launchpad",
    
    "src/build_helper",
    "src/rustc-std-workspace/rustc-std-workspace-alloc",
    "src/rustc-std-workspace/rustc-std-workspace-core",
    "src/rustc-std-workspace/rustc-std-workspace-std",
    "src/rustdoc-json-types",
    "src/tools/build-manifest",
    "src/tools/bump-stage0",
    "src/tools/cargotest",
    "src/tools/clippy",
    "src/tools/clippy/clippy_dev",
    "src/tools/collect-license-metadata",
    "src/tools/compiletest",
    "src/tools/coverage-dump",
    "src/tools/features-status-dump",
    "src/tools/generate-copyright",
    "src/tools/generate-windows-sys",
    "src/tools/html-checker",
    "src/tools/jsondocck",
    "src/tools/jsondoclint",
    "src/tools/linkchecker",
    "src/tools/lint-docs",
    "src/tools/lld-wrapper",
    "src/tools/llvm-bitcode-linker",
    "src/tools/miri/cargo-miri",
    "src/tools/opt-dist",
    "src/tools/remote-test-client",
    "src/tools/remote-test-server",
    "src/tools/replace-version-placeholder",
    "src/tools/run-make-support",
    "src/tools/rust-installer",
    "src/tools/rustdoc",
    "src/tools/rustdoc-gui-test",
    "src/tools/rustdoc-themes",
    "src/tools/rustfmt",
    "src/tools/test-float-parse",
    "src/tools/tidy",
    "src/tools/tier-check",
    "src/tools/unicode-table-generator",
    "src/tools/unstable-book-gen",
    "src/tools/wasm-component-ld",
    "src/tools/x",
    "submodule_analyzer",
    "vendor/qfall-crypto",
]
exclude = [
    "build",
    "compiler/rustc_codegen_cranelift",
    "compiler/rustc_codegen_gcc",
    "src/bootstrap",
    "tests/rustdoc-gui",
    "obj",
    "vendor/Lazarus",
    "vendor/latticefold-rs",
    "vendor/lattirust",
]
resolver = "2"

[workspace.dependencies]
bitflags = "2.x"
itertools = "0.12.0"
serde_json = "1.0"
tempfile = "3.x"
thin-vec = "0.2.12"
tracing = "0.1"
libc = "0.2"
either = "1.x"
indexmap = "1.x"
measureme = "0.8"
rustc-hash = "1.1.0"
proc-macro2 = "1.0"
quote = "1.0"
scoped-tls = "1.0"
memchr = "2.x"
rustc-literal-escaper = "0.1.0"
derive-where = "1.0"
odht = "0.1.0"
polonius-engine = "0.14.0"
rustc_apfloat = "0.1.0"
rustc-demangle = "0.1"
rand = "0.8"
blas-src = "0.8"
openblas-src = "0.8"