[package]
name = "rustc_serialize"
version = "0.0.0"
edition = "2024"

[dependencies]
# tidy-alphabetical-start
indexmap.workspace = true
rustc_hashes = { path = "../rustc_hashes" }
smallvec = { path = "../../../mcp/monomcp/vendor/smallvec", features = ["union"] }
thin-vec.workspace = true
# tidy-alphabetical-end

[dev-dependencies]
# tidy-alphabetical-start
rustc_macros = { path = "../rustc_macros" }
tempfile.workspace = true
# tidy-alphabetical-end
