[package]
name = "rust-bootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
arrow = { path = "../../../mcp/monomcp/vendor/arrow-rs/arrow" }
arrow-array = { path = "../../../mcp/monomcp/vendor/arrow-rs/arrow-array" }
arrow-schema = { path = "../../../mcp/monomcp/vendor/arrow-rs/arrow-schema" }
parquet = { path = "../../../mcp/monomcp/vendor/arrow-rs/parquet", features = ["arrow"] }
git2 = "0.20.2"