[package]
name = "rust-bootstrap"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "git-analyzer-cli"
path = "src/bin/git_analyzer_cli.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
arrow = { path = "../../../mcp/monomcp/vendor/arrow-rs/arrow" }
arrow-array = { path = "../../../mcp/monomcp/vendor/arrow-rs/arrow-array" }
arrow-schema = { path = "../../../mcp/monomcp/vendor/arrow-rs/arrow-schema" }
arrow-data = { path = "../../../mcp/monomcp/vendor/arrow-rs/arrow-data" } # Added this line
parquet = { path = "../../../mcp/monomcp/vendor/arrow-rs/parquet", features = ["arrow"] }
git2 = "0.20.2"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
tempfile = "3.20.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
cargo = { path = "../../../mcp/monomcp/vendor/cargo-rust-lang" }
tracing-core = { path = "../../../mcp/monomcp/vendor/tracing-vendor/tracing/tracing-core" }
tracing = { path = "../../../mcp/monomcp/vendor/tracing-vendor/tracing-0.1.41/tracing" }
syscall_instrumentation_macro = { path = "../syscall_instrumentation_macro" }